// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`budget pipeline golden outputs > getBudget (current month) 1`] = `
{
  "byCategory": [
    {
      "category": "Groceries",
      "count": 2,
      "period": "monthly",
      "spent": 202.45000000000002,
      "target": 850,
      "ytdSpent": 909.7900000000001,
    },
    {
      "category": "Gas & Electric",
      "count": 1,
      "period": "monthly",
      "spent": 132.55,
      "target": 0,
      "ytdSpent": 530.2,
    },
    {
      "category": "Shopping",
      "count": 1,
      "period": "monthly",
      "spent": 64.99,
      "target": 0,
      "ytdSpent": 259.96,
    },
    {
      "category": "Gas",
      "count": 1,
      "period": "monthly",
      "spent": 58.2,
      "target": 0,
      "ytdSpent": 232.8,
    },
    {
      "category": "Home Services",
      "count": 1,
      "period": "monthly",
      "spent": 45,
      "target": 0,
      "ytdSpent": 360,
    },
    {
      "category": "Restaurants & Bars",
      "count": 1,
      "period": "monthly",
      "spent": 23.4,
      "target": 0,
      "ytdSpent": 93.6,
    },
    {
      "category": "Entertainment & Recreation",
      "count": 1,
      "period": "monthly",
      "spent": 15.49,
      "target": 0,
      "ytdSpent": 61.96,
    },
    {
      "category": "Coffee Shops",
      "count": 1,
      "period": "monthly",
      "spent": 6.75,
      "target": 0,
      "ytdSpent": 33.75,
    },
    {
      "category": "Travel & Vacation",
      "count": 0,
      "period": "annual",
      "spent": 0,
      "target": 6000,
      "ytdSpent": 0,
    },
    {
      "category": "Mortgage",
      "count": 1,
      "excluded": true,
      "spent": 2800,
      "target": 0,
    },
  ],
  "comparison": {
    "priorMonth": 2675.5499999999997,
    "priorYearAvg": null,
  },
  "dailyCumulative": [
    {
      "current": 0,
      "day": 1,
      "prior": null,
    },
    {
      "current": 0,
      "day": 2,
      "prior": 1800,
    },
    {
      "current": 0,
      "day": 3,
      "prior": 1800,
    },
    {
      "current": 128.3,
      "day": 4,
      "prior": 1928.3,
    },
    {
      "current": 143.79000000000002,
      "day": 5,
      "prior": 1943.79,
    },
    {
      "current": 143.79000000000002,
      "day": 6,
      "prior": 1943.79,
    },
    {
      "current": 143.79000000000002,
      "day": 7,
      "prior": 1943.79,
    },
    {
      "current": 276.34000000000003,
      "day": 8,
      "prior": 2076.34,
    },
    {
      "current": 283.09000000000003,
      "day": 9,
      "prior": 2089.84,
    },
    {
      "current": 341.29,
      "day": 10,
      "prior": 2148.04,
    },
    {
      "current": 415.44000000000005,
      "day": 11,
      "prior": 2222.19,
    },
    {
      "current": 415.44000000000005,
      "day": 12,
      "prior": 2222.19,
    },
    {
      "current": 415.44000000000005,
      "day": 13,
      "prior": 2222.19,
    },
    {
      "current": 415.44000000000005,
      "day": 14,
      "prior": 2262.17,
    },
    {
      "current": 415.44000000000005,
      "day": 15,
      "prior": 2262.17,
    },
    {
      "current": 438.84000000000003,
      "day": 16,
      "prior": 2285.57,
    },
    {
      "current": 503.83000000000004,
      "day": 17,
      "prior": 2350.56,
    },
    {
      "current": 503.83000000000004,
      "day": 18,
      "prior": 2350.56,
    },
    {
      "current": 548.83,
      "day": 19,
      "prior": 2395.56,
    },
    {
      "current": 548.83,
      "day": 20,
      "prior": 2395.56,
    },
    {
      "current": 548.83,
      "day": 21,
      "prior": 2495.5499999999997,
    },
    {
      "current": 548.83,
      "day": 22,
      "prior": 2495.5499999999997,
    },
    {
      "current": 548.83,
      "day": 23,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 24,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 25,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 26,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 27,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 28,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 29,
      "prior": 2675.5499999999997,
    },
    {
      "current": null,
      "day": 30,
      "prior": 2675.5499999999997,
    },
  ],
  "housing": {
    "properties": [],
    "totals": {
      "annualInterest": 0,
      "annualPrincipal": 0,
      "balance": 0,
      "equity": 0,
      "hoaAnnual": 0,
      "insuranceAnnual": 0,
      "monthlyCarry": 0,
      "monthlyPI": 0,
      "propertyTaxAnnual": 0,
      "rentalIncomeAnnual": 0,
      "value": 0,
    },
  },
  "importedCount": 2,
  "importedPending": 2,
  "income": 3120.44,
  "month": "2026-06",
  "months": [
    "2026-06",
    "2026-05",
    "2026-04",
    "2026-03",
  ],
  "mortgage": 2800,
  "needsReview": [],
  "recent": [
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-06-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-62",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1781870400,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-06-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-61",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1781697600,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-06-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-59",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1781611200,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-06-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-52",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1781524800,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-06-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-57",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1781179200,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-06-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-60",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1781092800,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-06-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-58",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1781006400,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-06-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-54",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1780920000,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-06-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-55",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1780660800,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-06-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-56",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1780574400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-06-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-53",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1780488000,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-05-28",
      "description": "REFORMED RADIOLOGY DIRECT DEP",
      "flipped": false,
      "id": "g-tx-36",
      "memo": "",
      "merchant": "reformed radiology direct dep",
      "payee": "REFORMED RADIOLOGY DIRECT DEP",
      "postedAt": 1779969600,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
  ],
  "spending": 548.8299999999999,
  "totalBudget": 1350,
  "transactions": [
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-06-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-62",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1781870400,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-06-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-61",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1781697600,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-06-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-59",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1781611200,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-06-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-52",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1781524800,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-06-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-57",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1781179200,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-06-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-60",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1781092800,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-06-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-58",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1781006400,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-06-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-54",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1780920000,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-06-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-55",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1780660800,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-06-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-56",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1780574400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-06-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-53",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1780488000,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
  ],
}
`;

exports[`budget pipeline golden outputs > getBudget (full prior month) 1`] = `
{
  "byCategory": [
    {
      "category": "Miscellaneous",
      "count": 3,
      "period": "monthly",
      "spent": 1839.98,
      "target": 0,
      "ytdSpent": 1839.98,
    },
    {
      "category": "Groceries",
      "count": 3,
      "period": "monthly",
      "spent": 302.44,
      "target": 850,
      "ytdSpent": 707.34,
    },
    {
      "category": "Home Services",
      "count": 2,
      "period": "monthly",
      "spent": 225,
      "target": 0,
      "ytdSpent": 315,
    },
    {
      "category": "Gas & Electric",
      "count": 1,
      "period": "monthly",
      "spent": 132.55,
      "target": 0,
      "ytdSpent": 397.65000000000003,
    },
    {
      "category": "Shopping",
      "count": 1,
      "period": "monthly",
      "spent": 64.99,
      "target": 0,
      "ytdSpent": 194.96999999999997,
    },
    {
      "category": "Gas",
      "count": 1,
      "period": "monthly",
      "spent": 58.2,
      "target": 0,
      "ytdSpent": 174.60000000000002,
    },
    {
      "category": "Restaurants & Bars",
      "count": 1,
      "period": "monthly",
      "spent": 23.4,
      "target": 0,
      "ytdSpent": 70.19999999999999,
    },
    {
      "category": "Entertainment & Recreation",
      "count": 1,
      "period": "monthly",
      "spent": 15.49,
      "target": 0,
      "ytdSpent": 46.47,
    },
    {
      "category": "Coffee Shops",
      "count": 2,
      "period": "monthly",
      "spent": 13.5,
      "target": 0,
      "ytdSpent": 27,
    },
    {
      "category": "Travel & Vacation",
      "count": 0,
      "period": "annual",
      "spent": 0,
      "target": 6000,
      "ytdSpent": 0,
    },
    {
      "category": "Mortgage",
      "count": 1,
      "excluded": true,
      "spent": 2800,
      "target": 0,
    },
  ],
  "comparison": {
    "priorMonth": 548.8299999999999,
    "priorYearAvg": null,
  },
  "dailyCumulative": [
    {
      "current": 0,
      "day": 1,
      "prior": null,
    },
    {
      "current": 1800,
      "day": 2,
      "prior": null,
    },
    {
      "current": 1800,
      "day": 3,
      "prior": null,
    },
    {
      "current": 1928.3,
      "day": 4,
      "prior": 128.3,
    },
    {
      "current": 1943.79,
      "day": 5,
      "prior": 143.79000000000002,
    },
    {
      "current": 1943.79,
      "day": 6,
      "prior": 143.79000000000002,
    },
    {
      "current": 1943.79,
      "day": 7,
      "prior": 143.79000000000002,
    },
    {
      "current": 2076.34,
      "day": 8,
      "prior": 276.34000000000003,
    },
    {
      "current": 2089.84,
      "day": 9,
      "prior": 283.09000000000003,
    },
    {
      "current": 2148.04,
      "day": 10,
      "prior": 341.29,
    },
    {
      "current": 2222.19,
      "day": 11,
      "prior": 415.44000000000005,
    },
    {
      "current": 2222.19,
      "day": 12,
      "prior": 415.44000000000005,
    },
    {
      "current": 2222.19,
      "day": 13,
      "prior": 415.44000000000005,
    },
    {
      "current": 2262.17,
      "day": 14,
      "prior": 415.44000000000005,
    },
    {
      "current": 2262.17,
      "day": 15,
      "prior": 415.44000000000005,
    },
    {
      "current": 2285.57,
      "day": 16,
      "prior": 438.84000000000003,
    },
    {
      "current": 2350.56,
      "day": 17,
      "prior": 503.83000000000004,
    },
    {
      "current": 2350.56,
      "day": 18,
      "prior": 503.83000000000004,
    },
    {
      "current": 2395.56,
      "day": 19,
      "prior": 548.83,
    },
    {
      "current": 2395.56,
      "day": 20,
      "prior": 548.83,
    },
    {
      "current": 2495.5499999999997,
      "day": 21,
      "prior": 548.83,
    },
    {
      "current": 2495.5499999999997,
      "day": 22,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 23,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 24,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 25,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 26,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 27,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 28,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 29,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 30,
      "prior": 548.83,
    },
    {
      "current": 2675.5499999999997,
      "day": 31,
      "prior": 548.83,
    },
  ],
  "housing": {
    "properties": [],
    "totals": {
      "annualInterest": 0,
      "annualPrincipal": 0,
      "balance": 0,
      "equity": 0,
      "hoaAnnual": 0,
      "insuranceAnnual": 0,
      "monthlyCarry": 0,
      "monthlyPI": 0,
      "propertyTaxAnnual": 0,
      "rentalIncomeAnnual": 0,
      "value": 0,
    },
  },
  "importedCount": 2,
  "importedPending": 2,
  "income": 6240.88,
  "month": "2026-05",
  "months": [
    "2026-06",
    "2026-05",
    "2026-04",
    "2026-03",
  ],
  "mortgage": 2800,
  "needsReview": [
    {
      "account": "Total Checking (1234)",
      "amount": -19.99,
      "category": "Miscellaneous",
      "date": "2026-05-14",
      "description": "GENERIC POS",
      "flipped": false,
      "id": "g-checking-1778760000--19.99",
      "memo": "",
      "merchant": "generic pos",
      "payee": "GENERIC POS",
      "postedAt": 1778760000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -19.99,
      "category": "Miscellaneous",
      "date": "2026-05-14",
      "description": "GENERIC POS",
      "flipped": false,
      "id": "g-checking-1778760000--19.99#2",
      "memo": "",
      "merchant": "generic pos",
      "payee": "GENERIC POS",
      "postedAt": 1778760000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -1800,
      "category": "Miscellaneous",
      "date": "2026-05-02",
      "description": "BILT HOUSING #42",
      "flipped": true,
      "id": "g-tx-68",
      "memo": "",
      "merchant": "bilt housing #42",
      "payee": "BILT HOUSING #42",
      "postedAt": 1777723200,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
  ],
  "recent": [
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-06-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-62",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1781870400,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-06-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-61",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1781697600,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-06-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-59",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1781611200,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-06-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-52",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1781524800,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-06-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-57",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1781179200,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-06-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-60",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1781092800,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-06-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-58",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1781006400,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-06-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-54",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1780920000,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-06-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-55",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1780660800,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-06-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-56",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1780574400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-06-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-53",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1780488000,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-05-28",
      "description": "REFORMED RADIOLOGY DIRECT DEP",
      "flipped": false,
      "id": "g-tx-36",
      "memo": "",
      "merchant": "reformed radiology direct dep",
      "payee": "REFORMED RADIOLOGY DIRECT DEP",
      "postedAt": 1779969600,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
  ],
  "spending": 2675.5499999999997,
  "totalBudget": 1350,
  "transactions": [
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-05-28",
      "description": "REFORMED RADIOLOGY DIRECT DEP",
      "flipped": false,
      "id": "g-tx-36",
      "memo": "",
      "merchant": "reformed radiology direct dep",
      "payee": "REFORMED RADIOLOGY DIRECT DEP",
      "postedAt": 1779969600,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -180,
      "category": "Home Services",
      "date": "2026-05-23",
      "description": "Blue Wave Pool Service",
      "flipped": false,
      "id": "imp|2026-05-23|-180.00|blue wave pool service|total checking (1234",
      "memo": "",
      "merchant": "blue wave pool service",
      "payee": "Blue Wave Pool Service",
      "postedAt": 1779494400,
      "suggested": "Home Services",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -99.99,
      "amountEdited": true,
      "category": "Groceries",
      "date": "2026-05-21",
      "description": "SAFEWAY",
      "flipped": false,
      "id": "g-override-me",
      "memo": "",
      "merchant": "safeway",
      "payee": "SAFEWAY",
      "postedAt": 1779364800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-05-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-46",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1779192000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-05-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-45",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1779019200,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-05-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-43",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1778932800,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-05-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-35",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1778846400,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -19.99,
      "category": "Miscellaneous",
      "date": "2026-05-14",
      "description": "GENERIC POS",
      "flipped": false,
      "id": "g-checking-1778760000--19.99",
      "memo": "",
      "merchant": "generic pos",
      "payee": "GENERIC POS",
      "postedAt": 1778760000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -19.99,
      "category": "Miscellaneous",
      "date": "2026-05-14",
      "description": "GENERIC POS",
      "flipped": false,
      "id": "g-checking-1778760000--19.99#2",
      "memo": "",
      "merchant": "generic pos",
      "payee": "GENERIC POS",
      "postedAt": 1778760000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-05-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-41",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1778500800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-05-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-44",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1778414400,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-05-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-42",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1778328000,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-05-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-69",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1778328000,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-05-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-38",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1778241600,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-05-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-39",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1777982400,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-05-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-40",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1777896000,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-05-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-37",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1777809600,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -1800,
      "category": "Miscellaneous",
      "date": "2026-05-02",
      "description": "BILT HOUSING #42",
      "flipped": true,
      "id": "g-tx-68",
      "memo": "",
      "merchant": "bilt housing #42",
      "payee": "BILT HOUSING #42",
      "postedAt": 1777723200,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
  ],
}
`;

exports[`budget pipeline golden outputs > getCashFlow (12m, detailed) 1`] = `
{
  "income": 21843.08,
  "label": "Last 12 months",
  "links": [
    {
      "source": 1,
      "target": 0,
      "value": 21843.08,
    },
    {
      "source": 0,
      "target": 2,
      "value": 6321.04,
    },
    {
      "source": 0,
      "target": 3,
      "value": 12090.2,
    },
    {
      "source": 0,
      "target": 4,
      "value": 1839.98,
    },
    {
      "source": 0,
      "target": 5,
      "value": 1037.14,
    },
    {
      "source": 0,
      "target": 6,
      "value": 294.76,
    },
    {
      "source": 0,
      "target": 7,
      "value": 259.96,
    },
    {
      "source": 3,
      "target": 8,
      "value": 11200,
    },
    {
      "source": 3,
      "target": 9,
      "value": 530.2,
    },
    {
      "source": 3,
      "target": 10,
      "value": 360,
    },
    {
      "source": 4,
      "target": 11,
      "value": 1839.98,
    },
    {
      "source": 5,
      "target": 12,
      "value": 909.79,
    },
    {
      "source": 5,
      "target": 13,
      "value": 93.6,
    },
    {
      "source": 5,
      "target": 14,
      "value": 33.75,
    },
    {
      "source": 6,
      "target": 15,
      "value": 232.8,
    },
    {
      "source": 6,
      "target": 16,
      "value": 61.96,
    },
    {
      "source": 7,
      "target": 17,
      "value": 259.96,
    },
  ],
  "nodes": [
    {
      "col": 1,
      "color": "#22b8cf",
      "filter": {
        "type": "income",
      },
      "kind": "hub",
      "name": "Income",
    },
    {
      "col": 0,
      "color": "#22b8cf",
      "filter": {
        "type": "source",
        "value": "reformed radiology",
      },
      "kind": "source",
      "name": "Reformed Radiology",
    },
    {
      "col": 2,
      "color": "#4ade80",
      "filter": {
        "type": "savings",
      },
      "kind": "savings",
      "name": "Savings",
    },
    {
      "col": 2,
      "color": "#6c8fff",
      "filter": {
        "type": "group",
        "value": "Housing",
      },
      "kind": "group",
      "name": "Housing",
    },
    {
      "col": 2,
      "color": "#94a3b8",
      "filter": {
        "type": "group",
        "value": "Other",
      },
      "kind": "group",
      "name": "Other",
    },
    {
      "col": 2,
      "color": "#f472b6",
      "filter": {
        "type": "group",
        "value": "Food & Dining",
      },
      "kind": "group",
      "name": "Food & Dining",
    },
    {
      "col": 2,
      "color": "#38bdf8",
      "filter": {
        "type": "group",
        "value": "Travel & Lifestyle",
      },
      "kind": "group",
      "name": "Travel & Lifestyle",
    },
    {
      "col": 2,
      "color": "#f87171",
      "filter": {
        "type": "group",
        "value": "Shopping",
      },
      "kind": "group",
      "name": "Shopping",
    },
    {
      "col": 3,
      "color": "#6c8fff",
      "filter": {
        "type": "category",
        "value": "Mortgage",
      },
      "kind": "category",
      "name": "🏦 Mortgage",
    },
    {
      "col": 3,
      "color": "#6c8fff",
      "filter": {
        "type": "category",
        "value": "Gas & Electric",
      },
      "kind": "category",
      "name": "⚡ Gas & Electric",
    },
    {
      "col": 3,
      "color": "#6c8fff",
      "filter": {
        "type": "category",
        "value": "Home Services",
      },
      "kind": "category",
      "name": "🧹 Home Services",
    },
    {
      "col": 3,
      "color": "#94a3b8",
      "filter": {
        "type": "category",
        "value": "Miscellaneous",
      },
      "kind": "category",
      "name": "🏷️ Miscellaneous",
    },
    {
      "col": 3,
      "color": "#f472b6",
      "filter": {
        "type": "category",
        "value": "Groceries",
      },
      "kind": "category",
      "name": "🛒 Groceries",
    },
    {
      "col": 3,
      "color": "#f472b6",
      "filter": {
        "type": "category",
        "value": "Restaurants & Bars",
      },
      "kind": "category",
      "name": "🍽️ Restaurants & Bars",
    },
    {
      "col": 3,
      "color": "#f472b6",
      "filter": {
        "type": "category",
        "value": "Coffee Shops",
      },
      "kind": "category",
      "name": "☕ Coffee Shops",
    },
    {
      "col": 3,
      "color": "#38bdf8",
      "filter": {
        "type": "category",
        "value": "Gas",
      },
      "kind": "category",
      "name": "⛽ Gas",
    },
    {
      "col": 3,
      "color": "#38bdf8",
      "filter": {
        "type": "category",
        "value": "Entertainment & Recreation",
      },
      "kind": "category",
      "name": "🎬 Entertainment & Recreation",
    },
    {
      "col": 3,
      "color": "#f87171",
      "filter": {
        "type": "category",
        "value": "Shopping",
      },
      "kind": "category",
      "name": "🛍️ Shopping",
    },
  ],
  "range": "12m",
  "savings": 6321.04,
  "spending": 15522.04,
}
`;

exports[`budget pipeline golden outputs > getCashFlowTransactions (category drill-down) 1`] = `
{
  "label": "Groceries",
  "total": 909.79,
  "txns": [
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-06-11",
      "description": "TRADER JOE'S",
      "id": "g-tx-57",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1781179200,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-06-04",
      "description": "WHOLE FOODS MARKET",
      "id": "g-tx-56",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1780574400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -99.99,
      "amountEdited": true,
      "category": "Groceries",
      "date": "2026-05-21",
      "description": "SAFEWAY",
      "id": "g-override-me",
      "memo": "",
      "merchant": "safeway",
      "payee": "SAFEWAY",
      "postedAt": 1779364800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-05-11",
      "description": "TRADER JOE'S",
      "id": "g-tx-41",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1778500800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-05-04",
      "description": "WHOLE FOODS MARKET",
      "id": "g-tx-40",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1777896000,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-04-11",
      "description": "TRADER JOE'S",
      "id": "g-tx-24",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1775908800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-04-04",
      "description": "WHOLE FOODS MARKET",
      "id": "g-tx-23",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1775304000,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-03-11",
      "description": "TRADER JOE'S",
      "id": "g-tx-6",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1773230400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "amountEdited": undefined,
      "category": "Groceries",
      "date": "2026-03-04",
      "description": "WHOLE FOODS MARKET",
      "id": "g-tx-5",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1772625600,
      "suggested": "Groceries",
      "transactedAt": null,
    },
  ],
}
`;

exports[`budget pipeline golden outputs > getCategoryGroups and state snapshot 1`] = `
[
  {
    "categories": [
      {
        "canonical": "Dividends & Capital Gains",
        "custom": false,
        "emoji": "📈",
        "name": "Dividends & Capital Gains",
      },
      {
        "canonical": "Other Income",
        "custom": false,
        "emoji": "💰",
        "name": "Other Income",
      },
      {
        "canonical": "Paychecks",
        "custom": false,
        "emoji": "💵",
        "name": "Paychecks",
      },
    ],
    "color": "#22b8cf",
    "name": "Income",
  },
  {
    "categories": [
      {
        "canonical": "Gas & Electric",
        "custom": false,
        "emoji": "⚡",
        "name": "Gas & Electric",
      },
      {
        "canonical": "Home Improvement",
        "custom": false,
        "emoji": "🛠️",
        "name": "Home Improvement",
      },
      {
        "canonical": "Home Services",
        "custom": false,
        "emoji": "🧹",
        "name": "Home Services",
      },
      {
        "canonical": "Internet & Phone",
        "custom": false,
        "emoji": "📶",
        "name": "Internet & Phone",
      },
      {
        "canonical": "Mortgage",
        "custom": false,
        "emoji": "🏦",
        "name": "Mortgage",
      },
      {
        "canonical": "Rent",
        "custom": false,
        "emoji": "🏠",
        "name": "Rent",
      },
      {
        "canonical": "Subscriptions",
        "custom": false,
        "emoji": "🔁",
        "name": "Subscriptions",
      },
      {
        "canonical": "Water",
        "custom": false,
        "emoji": "💧",
        "name": "Water",
      },
    ],
    "color": "#6c8fff",
    "name": "Housing",
  },
  {
    "categories": [
      {
        "canonical": "Coffee Shops",
        "custom": false,
        "emoji": "☕",
        "name": "Coffee Shops",
      },
      {
        "canonical": "Groceries",
        "custom": false,
        "emoji": "🛒",
        "name": "Groceries",
      },
      {
        "canonical": "Restaurants & Bars",
        "custom": false,
        "emoji": "🍽️",
        "name": "Restaurants & Bars",
      },
    ],
    "color": "#f472b6",
    "name": "Food & Dining",
  },
  {
    "categories": [
      {
        "canonical": "Clothing",
        "custom": false,
        "emoji": "👕",
        "name": "Clothing",
      },
      {
        "canonical": "Electronics",
        "custom": false,
        "emoji": "💻",
        "name": "Electronics",
      },
      {
        "canonical": "Shopping",
        "custom": false,
        "emoji": "🛍️",
        "name": "Shopping",
      },
    ],
    "color": "#f87171",
    "name": "Shopping",
  },
  {
    "categories": [
      {
        "canonical": "Child Activities",
        "custom": false,
        "emoji": "🎨",
        "name": "Child Activities",
      },
      {
        "canonical": "Child Care",
        "custom": false,
        "emoji": "🧸",
        "name": "Child Care",
      },
    ],
    "color": "#fb923c",
    "name": "Children",
  },
  {
    "categories": [
      {
        "canonical": "Auto Payment",
        "custom": false,
        "emoji": "🚗",
        "name": "Auto Payment",
      },
      {
        "canonical": "Entertainment & Recreation",
        "custom": false,
        "emoji": "🎬",
        "name": "Entertainment & Recreation",
      },
      {
        "canonical": "Fitness",
        "custom": false,
        "emoji": "🏋️",
        "name": "Fitness",
      },
      {
        "canonical": "Gas",
        "custom": false,
        "emoji": "⛽",
        "name": "Gas",
      },
      {
        "canonical": "Medical",
        "custom": false,
        "emoji": "🏥",
        "name": "Medical",
      },
      {
        "canonical": "Parking & Tolls",
        "custom": false,
        "emoji": "🅿️",
        "name": "Parking & Tolls",
      },
      {
        "canonical": "Personal",
        "custom": false,
        "emoji": "💅",
        "name": "Personal",
      },
      {
        "canonical": "Taxi & Ride Shares",
        "custom": false,
        "emoji": "🚕",
        "name": "Taxi & Ride Shares",
      },
      {
        "canonical": "Travel & Vacation",
        "custom": false,
        "emoji": "✈️",
        "name": "Travel & Vacation",
      },
    ],
    "color": "#38bdf8",
    "name": "Travel & Lifestyle",
  },
  {
    "categories": [
      {
        "canonical": "Financial Fees",
        "custom": false,
        "emoji": "🧾",
        "name": "Financial Fees",
      },
      {
        "canonical": "Insurance",
        "custom": false,
        "emoji": "🛡️",
        "name": "Insurance",
      },
      {
        "canonical": "Taxes",
        "custom": false,
        "emoji": "🏛️",
        "name": "Taxes",
      },
    ],
    "color": "#2dd4bf",
    "name": "Financial",
  },
  {
    "categories": [
      {
        "canonical": "Charity",
        "custom": false,
        "emoji": "🎗️",
        "name": "Charity",
      },
      {
        "canonical": "Gifts",
        "custom": false,
        "emoji": "🎁",
        "name": "Gifts",
      },
    ],
    "color": "#c084fc",
    "name": "Gifts & Donations",
  },
  {
    "categories": [
      {
        "canonical": "Credit Card Payment",
        "custom": false,
        "emoji": "💳",
        "name": "Credit Card Payment",
      },
      {
        "canonical": "Miscellaneous",
        "custom": false,
        "emoji": "🏷️",
        "name": "Miscellaneous",
      },
      {
        "canonical": "Transfers",
        "custom": false,
        "emoji": "🔄",
        "name": "Transfers",
      },
    ],
    "color": "#94a3b8",
    "name": "Other",
  },
]
`;

exports[`budget pipeline golden outputs > getCategoryGroups and state snapshot 2`] = `
{
  "baseRules": [
    {
      "base": "local vendor",
      "category": "Home Services",
    },
  ],
  "categories": [
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Paychecks",
      "sort": 0,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Other Income",
      "sort": 1,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Dividends & Capital Gains",
      "sort": 2,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Mortgage",
      "sort": 3,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Rent",
      "sort": 4,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Home Improvement",
      "sort": 5,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Home Services",
      "sort": 6,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Gas & Electric",
      "sort": 7,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Water",
      "sort": 8,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Internet & Phone",
      "sort": 9,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Subscriptions",
      "sort": 10,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Groceries",
      "sort": 11,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Restaurants & Bars",
      "sort": 12,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Coffee Shops",
      "sort": 13,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Shopping",
      "sort": 14,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Clothing",
      "sort": 15,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Electronics",
      "sort": 16,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Child Care",
      "sort": 17,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Child Activities",
      "sort": 18,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Travel & Vacation",
      "sort": 19,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Entertainment & Recreation",
      "sort": 20,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Personal",
      "sort": 21,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Auto Payment",
      "sort": 22,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Gas",
      "sort": 23,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Parking & Tolls",
      "sort": 24,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Taxi & Ride Shares",
      "sort": 25,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Medical",
      "sort": 26,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Fitness",
      "sort": 27,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Taxes",
      "sort": 28,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Insurance",
      "sort": 29,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Financial Fees",
      "sort": 30,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Charity",
      "sort": 31,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Gifts",
      "sort": 32,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Transfers",
      "sort": 33,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Credit Card Payment",
      "sort": 34,
    },
    {
      "emoji": null,
      "grp": null,
      "label": null,
      "name": "Miscellaneous",
      "sort": 35,
    },
  ],
  "rules": [
    {
      "category": "Home Services",
      "merchant": "local vendor llc",
    },
  ],
  "smartRules": [
    {
      "amount": null,
      "base": null,
      "category": "Groceries",
      "contains": "safeway",
    },
  ],
  "targets": [
    {
      "category": "Groceries",
      "monthly_limit": 850,
      "period": "monthly",
    },
    {
      "category": "Travel & Vacation",
      "monthly_limit": 6000,
      "period": "annual",
    },
  ],
}
`;

exports[`budget pipeline golden outputs > getReviewQueue 1`] = `
{
  "groups": [
    {
      "account": "Total Checking (1234)",
      "count": 2,
      "lastDate": "2026-05-14",
      "merchant": "generic pos",
      "note": "",
      "payee": "GENERIC POS",
      "suggested": "",
      "suggestions": [
        "Groceries",
        "Coffee Shops",
        "Home Services",
        "Gas & Electric",
        "Entertainment & Recreation",
        "Restaurants & Bars",
      ],
      "total": 39.98,
      "txns": [
        {
          "account": "Total Checking (1234)",
          "amount": -19.99,
          "amountEdited": undefined,
          "date": "2026-05-14",
          "description": "GENERIC POS",
          "id": "g-checking-1778760000--19.99",
          "importedCategory": "",
          "memo": "",
          "postedAt": 1778760000,
          "suggested": "Miscellaneous",
          "transactedAt": null,
        },
        {
          "account": "Total Checking (1234)",
          "amount": -19.99,
          "amountEdited": undefined,
          "date": "2026-05-14",
          "description": "GENERIC POS",
          "id": "g-checking-1778760000--19.99#2",
          "importedCategory": "",
          "memo": "",
          "postedAt": 1778760000,
          "suggested": "Miscellaneous",
          "transactedAt": null,
        },
      ],
    },
    {
      "account": "Total Checking (1234)",
      "count": 1,
      "lastDate": "2026-05-02",
      "merchant": "bilt housing #42",
      "note": "",
      "payee": "BILT HOUSING #42",
      "suggested": "",
      "suggestions": [
        "Groceries",
        "Coffee Shops",
        "Home Services",
        "Gas & Electric",
        "Entertainment & Recreation",
        "Restaurants & Bars",
      ],
      "total": 1800,
      "txns": [
        {
          "account": "Total Checking (1234)",
          "amount": -1800,
          "amountEdited": undefined,
          "date": "2026-05-02",
          "description": "BILT HOUSING #42",
          "id": "g-tx-68",
          "importedCategory": "",
          "memo": "",
          "postedAt": 1777723200,
          "suggested": "Miscellaneous",
          "transactedAt": null,
        },
      ],
    },
  ],
  "topCategories": [
    "Groceries",
    "Coffee Shops",
    "Home Services",
    "Gas & Electric",
    "Entertainment & Recreation",
    "Restaurants & Bars",
    "Gas",
    "Shopping",
  ],
}
`;

exports[`budget pipeline golden outputs > getSpendingProjection 1`] = `
{
  "avgMonthlyIncome": 6241,
  "avgMonthlySpending": 1258,
  "byCategory": [
    {
      "avgMonthly": 613,
      "category": "Miscellaneous",
    },
    {
      "avgMonthly": 236,
      "category": "Groceries",
    },
    {
      "avgMonthly": 133,
      "category": "Gas & Electric",
    },
    {
      "avgMonthly": 105,
      "category": "Home Services",
    },
    {
      "avgMonthly": 65,
      "category": "Shopping",
    },
    {
      "avgMonthly": 58,
      "category": "Gas",
    },
    {
      "avgMonthly": 23,
      "category": "Restaurants & Bars",
    },
    {
      "avgMonthly": 15,
      "category": "Entertainment & Recreation",
    },
    {
      "avgMonthly": 9,
      "category": "Coffee Shops",
    },
  ],
  "months": [
    {
      "income": 6241,
      "month": "2026-03",
      "spending": 549,
    },
    {
      "income": 6241,
      "month": "2026-04",
      "spending": 549,
    },
    {
      "income": 6241,
      "month": "2026-05",
      "spending": 2676,
    },
    {
      "income": 3120,
      "month": "2026-06",
      "spending": 549,
    },
  ],
  "monthsAnalyzed": 3,
  "trendPctPerYear": 10.145,
}
`;

exports[`budget pipeline golden outputs > getTransactionsList 1`] = `
{
  "months": [
    "2026-06",
    "2026-05",
    "2026-04",
    "2026-03",
  ],
  "transactions": [
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-06-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-62",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1781870400,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-06-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-61",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1781697600,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-06-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-59",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1781611200,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-06-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-52",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1781524800,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-06-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-57",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1781179200,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-06-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-60",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1781092800,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-06-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-58",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1781006400,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-06-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-54",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1780920000,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-06-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-55",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1780660800,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-06-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-56",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1780574400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-06-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-53",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1780488000,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-05-28",
      "description": "REFORMED RADIOLOGY DIRECT DEP",
      "flipped": false,
      "id": "g-tx-36",
      "memo": "",
      "merchant": "reformed radiology direct dep",
      "payee": "REFORMED RADIOLOGY DIRECT DEP",
      "postedAt": 1779969600,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -180,
      "category": "Home Services",
      "date": "2026-05-23",
      "description": "Blue Wave Pool Service",
      "flipped": false,
      "id": "imp|2026-05-23|-180.00|blue wave pool service|total checking (1234",
      "memo": "",
      "merchant": "blue wave pool service",
      "payee": "Blue Wave Pool Service",
      "postedAt": 1779494400,
      "suggested": "Home Services",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -99.99,
      "amountEdited": true,
      "category": "Groceries",
      "date": "2026-05-21",
      "description": "SAFEWAY",
      "flipped": false,
      "id": "g-override-me",
      "memo": "",
      "merchant": "safeway",
      "payee": "SAFEWAY",
      "postedAt": 1779364800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-05-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-46",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1779192000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-05-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-45",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1779019200,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-05-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-43",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1778932800,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-05-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-35",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1778846400,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -19.99,
      "category": "Miscellaneous",
      "date": "2026-05-14",
      "description": "GENERIC POS",
      "flipped": false,
      "id": "g-checking-1778760000--19.99",
      "memo": "",
      "merchant": "generic pos",
      "payee": "GENERIC POS",
      "postedAt": 1778760000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -19.99,
      "category": "Miscellaneous",
      "date": "2026-05-14",
      "description": "GENERIC POS",
      "flipped": false,
      "id": "g-checking-1778760000--19.99#2",
      "memo": "",
      "merchant": "generic pos",
      "payee": "GENERIC POS",
      "postedAt": 1778760000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-05-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-41",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1778500800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-05-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-44",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1778414400,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-05-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-42",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1778328000,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-05-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-69",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1778328000,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-05-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-38",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1778241600,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-05-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-39",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1777982400,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-05-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-40",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1777896000,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-05-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-37",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1777809600,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -1800,
      "category": "Miscellaneous",
      "date": "2026-05-02",
      "description": "BILT HOUSING #42",
      "flipped": true,
      "id": "g-tx-68",
      "memo": "",
      "merchant": "bilt housing #42",
      "payee": "BILT HOUSING #42",
      "postedAt": 1777723200,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-04-28",
      "description": "REFORMED RADIOLOGY DIRECT DEP",
      "flipped": false,
      "id": "g-tx-19",
      "memo": "",
      "merchant": "reformed radiology direct dep",
      "payee": "REFORMED RADIOLOGY DIRECT DEP",
      "postedAt": 1777377600,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-04-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-29",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1776600000,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-04-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-28",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1776427200,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-04-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-26",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1776340800,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-04-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-18",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1776254400,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-04-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-24",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1775908800,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-04-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-27",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1775822400,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-04-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-25",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1775736000,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-04-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-21",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1775649600,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-04-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-22",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1775390400,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-04-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-23",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1775304000,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-04-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-20",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1775217600,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-03-28",
      "description": "REFORMED RADIOLOGY DIRECT DEP",
      "flipped": false,
      "id": "g-tx-1",
      "memo": "",
      "merchant": "reformed radiology direct dep",
      "payee": "REFORMED RADIOLOGY DIRECT DEP",
      "postedAt": 1774699200,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -45,
      "category": "Home Services",
      "date": "2026-03-19",
      "description": "LOCAL VENDOR LLC",
      "flipped": false,
      "id": "g-tx-11",
      "memo": "",
      "merchant": "local vendor llc",
      "payee": "LOCAL VENDOR LLC",
      "postedAt": 1773921600,
      "suggested": "Miscellaneous",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -64.99,
      "category": "Shopping",
      "date": "2026-03-17",
      "description": "AMZN MKTP US*XX91Y",
      "flipped": false,
      "id": "g-tx-10",
      "memo": "",
      "merchant": "amazon",
      "payee": "AMAZON",
      "postedAt": 1773748800,
      "suggested": "Shopping",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -23.4,
      "category": "Restaurants & Bars",
      "date": "2026-03-16",
      "description": "CHIPOTLE",
      "flipped": false,
      "id": "g-tx-8",
      "memo": "",
      "merchant": "chipotle",
      "payee": "CHIPOTLE",
      "postedAt": 1773662400,
      "suggested": "Restaurants & Bars",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": 3120.44,
      "category": "Paychecks",
      "date": "2026-03-15",
      "description": "REFORMED RADIOLO PAYROLL",
      "flipped": false,
      "id": "g-tx-0",
      "memo": "",
      "merchant": "reformed radiolo payroll",
      "payee": "REFORMED RADIOLO PAYROLL",
      "postedAt": 1773576000,
      "suggested": "Paychecks",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -74.15,
      "category": "Groceries",
      "date": "2026-03-11",
      "description": "TRADER JOE'S",
      "flipped": false,
      "id": "g-tx-6",
      "memo": "",
      "merchant": "trader joe's",
      "payee": "TRADER JOE'S",
      "postedAt": 1773230400,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -58.2,
      "category": "Gas",
      "date": "2026-03-10",
      "description": "SHELL",
      "flipped": false,
      "id": "g-tx-9",
      "memo": "",
      "merchant": "shell",
      "payee": "SHELL",
      "postedAt": 1773144000,
      "suggested": "Gas",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -6.75,
      "category": "Coffee Shops",
      "date": "2026-03-09",
      "description": "STARBUCKS",
      "flipped": false,
      "id": "g-tx-7",
      "memo": "",
      "merchant": "starbucks",
      "payee": "STARBUCKS",
      "postedAt": 1773057600,
      "suggested": "Coffee Shops",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -132.55,
      "category": "Gas & Electric",
      "date": "2026-03-08",
      "description": "PG&E ELECTRIC",
      "flipped": false,
      "id": "g-tx-3",
      "memo": "",
      "merchant": "pg&e electric",
      "payee": "PG&E ELECTRIC",
      "postedAt": 1772971200,
      "suggested": "Gas & Electric",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -15.49,
      "category": "Entertainment & Recreation",
      "date": "2026-03-05",
      "description": "NETFLIX",
      "flipped": false,
      "id": "g-tx-4",
      "memo": "",
      "merchant": "netflix",
      "payee": "NETFLIX",
      "postedAt": 1772712000,
      "suggested": "Entertainment & Recreation",
      "transactedAt": null,
    },
    {
      "account": "Sapphire Credit Card (4167)",
      "amount": -128.3,
      "category": "Groceries",
      "date": "2026-03-04",
      "description": "WHOLE FOODS MARKET",
      "flipped": false,
      "id": "g-tx-5",
      "memo": "",
      "merchant": "whole foods market",
      "payee": "WHOLE FOODS MARKET",
      "postedAt": 1772625600,
      "suggested": "Groceries",
      "transactedAt": null,
    },
    {
      "account": "Total Checking (1234)",
      "amount": -2800,
      "category": "Mortgage",
      "date": "2026-03-03",
      "description": "ROCKET MORTGAGE PMT",
      "flipped": false,
      "id": "g-tx-2",
      "memo": "",
      "merchant": "rocket mortgage pmt",
      "payee": "ROCKET MORTGAGE PMT",
      "postedAt": 1772539200,
      "suggested": "Mortgage",
      "transactedAt": null,
    },
  ],
}
`;
